# hqp

./: .gitignore  ChangeLog  INSTALL  INSTALL.html  Makefile  Makefile.hqp  README  README.html  README.md  configure  configure.in  hqp_adolc.patch  index.html  install_name  makedefs.in  makedirs.in
adol-c/: AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac  hqp_adolc.patch  libtool
adol-c/INS/: README.INS  aix_comp  dec_comp  gnu_comp  makefile  makefile.SRC.head  makefile.SRC.tail  makefile.SRC.tail.ori  makefile.ori  sgi_comp  sun_comp  xxx_comp  xxx_comp.ori
adol-c/SRC/: README.SRC  TODO.SRC  adalloc.c  adalloc.h  adallocC.C  adolc.h  adouble.C  adouble.h  adutils.h  adutilsc.h  avector.C  avector.h  convolut.c  convolut.c.pointer  convolut.h  dvlparms.h  fo_rev.c  fortutils.c  fortutils.h  ho_rev.c  interfaces.h  interfacesC.C  interfacesf.c  oplate.h  taputil.c  taputil.h  taputilC.C  tayutil.c  tayutil.h  tayutilC.C  uni5_for.c  usrparms.h  usrparms.h.ori
adol-c/SRC/DRIVERS/: drivers.c  drivers.h  driversf.c  odedrivers.c  odedrivers.h  odedriversC.C  odedriversf.c  taylor.c  taylor.h
adol-c/SRC/SPARSE/: int_for.c  int_rev.c  jacutils.c  jacutils.h  sparse.c  sparse.h  sparseC.C
adol-c/SRC/TAPEDOC/: tapedoc.c  tapedoc.h
adol-c/adolc/: Makefile.am  Makefile.in  adalloc.c  adalloc.h  adolc.h  adouble.cpp  adouble.h  adouble.h.rej  adutils.h  adutilsc.h  avector.cpp  avector.h  common.h  common.h.rej  config.h.in  convolut.c  convolut.h  dvlparms.h  fo_rev.c  fortutils.c  fortutils.h  forward_partx.c  fos_forward.c  fos_reverse.c  fov_forward.c  fov_reverse.c  ho_rev.c  hos_forward.c  hos_ov_reverse.c  hos_reverse.c  hov_forward.c  hov_reverse.c  hov_wk_forward.c  interfaces.cpp  interfaces.h  interfacesf.c  oplate.h  taputil.c  taputil.h  taputil_p.h  (+8 more)
adol-c/adolc/drivers/: Makefile.am  Makefile.in  drivers.c  drivers.h  driversf.c  odedrivers.c  odedrivers.h  odedriversf.c  taylor.c  taylor.h
adol-c/adolc/sparse/: Makefile.am  Makefile.in  int_for.c  int_forward_s.c  int_forward_t.c  int_rev.c  int_reverse_s.c  int_reverse_t.c  jacutils.c  jacutils.h  sparse.cpp  sparse.h  sparsedrivers.c
adol-c/adolc/tapedoc/: Makefile.am  Makefile.in  tapedoc.c  tapedoc.h
adol-c/doc/: Makefile  Makefile.am  Makefile.in  adolc19.ps
adol-c/examples/: Makefile  Makefile.am  Makefile.in  README  detexam.cpp  gaussexam.cpp  odexam.cpp  powexam.cpp  speelpenning.cpp
adol-c/examples/additional_examples/: Makefile  Makefile.am  Makefile.in
adol-c/examples/additional_examples/clock/: Makefile  Makefile.am  Makefile.in  myclock.cpp  myclock.h
adol-c/examples/additional_examples/detexam/: Makefile  Makefile.am  Makefile.in  README  detexam-old.cpp  detexam.cpp
adol-c/examples/additional_examples/gauss/: Makefile  Makefile.am  Makefile.in  README  gaussexam.cpp
adol-c/examples/additional_examples/helm/: Makefile  Makefile.am  Makefile.in  README  helm-auto-exam.cpp  helm-diff-exam.cpp  helm-vect-exam.cpp
adol-c/examples/additional_examples/hessmat/: Makefile  Makefile.am  Makefile.in  README  hessmat.cpp
adol-c/examples/additional_examples/lighthouse/: Makefile  Makefile.am  Makefile.in  README  cubic-2.cpp  cubic-iter-2.cpp  cubic-iter.cpp  cubic.cpp
adol-c/examples/additional_examples/lufact/: LU.cpp  LU.h  LUdet.cpp  LUsolve.cpp  Makefile  Makefile.am  Makefile.in  README
adol-c/examples/additional_examples/ode/: Makefile  Makefile.am  Makefile.in  README  vfunc_eutroph.cpp  vfunc_fic.cpp  vfunc_robertson.cpp  vgenodemain.cpp
adol-c/examples/additional_examples/pow/: Makefile  Makefile.am  Makefile.in  README  powexam.cpp
adol-c/examples/additional_examples/scal/: Makefile  Makefile.am  Makefile.in  README  scalexam.cpp
adol-c/examples/additional_examples/sparse/: Makefile  Makefile.am  Makefile.in  README  jacpatexam.cpp
adol-c/examples/additional_examples/speelpenning/: Makefile  Makefile.am  Makefile.in  README  speelpenning.cpp
adol-c/examples/additional_examples/tapesave/: Makefile  Makefile.am  Makefile.in  README  createTape.cpp  useTape.cpp
adol-c/examples/additional_examples/taylor/: Makefile  Makefile.am  Makefile.in  README  accessexam.cpp  coordinates.cpp  inversexam.cpp  taylorexam.cpp  trigger.cpp
adol-c/examples/additional_examples/timing/: Makefile  Makefile.am  Makefile.in  README  rotations.cpp  rotations.h  sfunc_determinant.cpp  sfunc_experimental.cpp  sfunc_griewank.cpp  sfunc_helmholtz.cpp  sfunc_michalewitz.cpp  sfunc_power.cpp  sfunc_rosenbrock.cpp  sfunc_speelpenning.cpp  sgenmain.cpp  vfunc_gear.cpp  vfunc_pargear.cpp  vfunc_shuttle.cpp  vfunc_simplevec.cpp  vgenmain.cpp
daspk/: Makefile  README  omu_ddaspk30.patch
doc/: Doxyfile.in
hqp/: ChangeLog  Hqp.C  Hqp.h  Hqp_ASCEND_dummies.C  Hqp_CUTE.C  Hqp_CUTE_dummies.C  Hqp_CUTE_stubs_.C  Hqp_Client.C  Hqp_Client.h  Hqp_Docp.C  Hqp_Docp.h  Hqp_DocpAdol.C  Hqp_DocpAdol.h  Hqp_DocpWrapper.h  Hqp_Docp_wrapper.h  Hqp_DynLoad.C  Hqp_DynLoad.h  Hqp_HL.C  Hqp_HL.h  Hqp_HL_AugBFGS.C  Hqp_HL_AugBFGS.h  Hqp_HL_BFGS.C  Hqp_HL_BFGS.h  Hqp_HL_DScale.C  Hqp_HL_DScale.h  Hqp_HL_Gangster.C  Hqp_HL_Gangster.h  Hqp_HL_Gerschgorin.C  Hqp_HL_Gerschgorin.h  Hqp_HL_SparseBFGS.C  Hqp_HL_SparseBFGS.h  Hqp_Init.C  Hqp_IpBdBKP.C  Hqp_IpBdBKP.h  Hqp_IpBdLU.C  Hqp_IpBdLU.h  Hqp_IpFullBdLU.C  Hqp_IpFullBdLU.h  Hqp_IpFullSpLU.C  Hqp_IpFullSpLU.h  (+71 more)
hqp_cute/: README  copycute  hqp  hqp_cute.tcl  hqpma.f  sdhqp
hqp_docp/: Docp_Main.C  Makefile.in  Prg_DID.C  Prg_DID.h  Prg_Di.C  Prg_Di.h  README  run
hxi/: Hxi_MEX_SFunction.C  Hxi_MEX_SFunction.h  Hxi_SFunction.C  Hxi_SFunction.h  Hxi_SimStruct.C  Hxi_SimStruct.h  Hxi_SimStruct_methods.h  Hxi_mxArray.h  Hxi_mx_parse.h  Hxi_sfun_types.h  README  cg_sfun.h  fmi.tcl  fmi2FunctionTypes.h  sfun_fmu.c  simstruc.h
iftcl/: If.C  If.h  If_Bool.C  If_Bool.h  If_Class.C  If_Class.h  If_Command.C  If_Command.h  If_Element.C  If_Element.h  If_Float.C  If_Float.h  If_FloatMat.C  If_FloatMat.h  If_FloatVec.C  If_FloatVec.h  If_Int.C  If_Int.h  If_IntVec.C  If_IntVec.h  If_List.C  (+23 more)
(+966 files in other folders)
